--- a/codeatlas-frontend/src/assets/styles/projects.css
+++ b/codeatlas-frontend/src/assets/styles/projects.css
@@ -21,11 +21,83 @@
   margin: 0;
 }
 
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
 .project-button {
-  padding: 10px 18px;
+  padding: 10px 28px;
   background-color: #FF4B00;
   border: none;
-  border-radius: 12px;
   color: white;
+  border-radius: 8px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.project-button:hover {
+  background-color: white;
+  border: 2px solid #FF4B00;
+  color: black;
+}
+
+.delete-button {
+  padding: 9px 28px;
+  background-color: white;
+  border: 2px solid #FF4B00;
+  color: black;
+  border-radius: 8px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+/* modal */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal {
+  background: white;
+  padding: 20px 50px;
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+}
+
+.modal-actions {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.yes-button {
+  padding: 10px 28px;
+  background-color: #FF4B00;
+  border: none;
+  color: white;
+  border-radius: 8px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.no-button {
+  padding: 9px 28px;
+  background-color: white;
+  border: 2px solid #FF4B00;
+  color: black;
+  border-radius: 8px;
+  font-size: 18px;
   cursor: pointer;
 }
