--- a/codeatlas-frontend/src/assets/styles/signup.css
+++ b/codeatlas-frontend/src/assets/styles/signup.css
@@ -1,32 +1,66 @@
+.app-header {
+  width: 100%;
+  padding: 20px 40px;
+  background-color: white;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  position: sticky;
+  top: 0;
+  position: fixed;
+}
+
+.title {
+  margin: 0;
+  font-size: 2rem;
+  font-weight: 800;
+  color: black;
+}
+
 .signup-screen {
   display: flex;
-  justify-content: center;
+  height: 90vh;
+  width: 100%;
+  margin-top: 90px;
+}
+
+.signup-image {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;  
   align-items: center;
+  background-color: rgb(247, 242, 242);
 }
 
-.signup-container {
-  background: #fff;
-  padding: 40px;
-  border-radius: 15px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-  width: 620px;
-  text-align: center;
+.signup-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
-.signup-container h1 {
+.signup-content {
+  flex: 1;
+  padding: 60px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white; 
+}
+
+.signup-content h1 {
   color: #FF4B00;
   font-size: 2.5rem;
   font-weight: 700;
 }
 
-.signup-container p {
+.signup-content p {
   margin-top: 5px;
   color: black;
   font-size: 1rem;
 }
 
-.signup-container span {
-    color: #FF4B00;
+.signup-content span {
+  color: #FF4B00;
 }
 
 .login-form {
@@ -94,16 +128,16 @@
 
 /* Tablet view */
 @media (max-width: 768px) {
-  .signup-container {
+  .signup-content {
     width: 90%;
     padding: 30px 20px;
   }
 
-  .signup-container h1 {
+  .signup-content h1 {
     font-size: 2rem;
   }
 
-  .signup-container p {
+  .signup-content p {
     font-size: 0.95rem;
   }
 
@@ -120,7 +154,7 @@
 
 /* Mobile view */
 @media (max-width: 480px) {
-  .signup-container {
+  .signup-content {
     width: 100%;
     padding: 25px 15px;
     border-radius: 10px;
@@ -129,11 +163,11 @@
     margin-top: 120px;
   }
 
-  .signup-container h1 {
+  .signup-content h1 {
     font-size: 1.8rem;
   }
 
-  .signup-container p {
+  .signup-content p {
     font-size: 0.9rem;
   }
 
