--- a/codeatlas-frontend/src/assets/styles/dashboard.css
+++ b/codeatlas-frontend/src/assets/styles/dashboard.css
@@ -52,11 +52,11 @@
   cursor: pointer;
 }
 
-.dashboard-button:hover {
+/* .dashboard-button:hover {
   background-color: white;
   border: 2px solid #FF4B00;
   color: black;
-}
+} */
 
 /* Main content */
 .main-content {
@@ -218,3 +218,78 @@
   background-color: #FF4B00;
 }
 
+/* Full-screen overlay */
+.search-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(30, 30, 30, 0.95);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 100px;
+  z-index: 1000;
+  overflow-y: auto;
+}
+
+/* Modal container */
+.search-modal {
+  background: white;
+  border-radius: 12px;
+  width: 600px;
+  max-width: 90%;
+  color: white;
+  padding: 20px;
+}
+
+.search-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  background-color: #F3F3F3;
+  border: 1px solid #ddd;
+  padding: 12px 14px;
+  border-radius: 8px;
+  width: 600px;
+  font-size: 15px;
+  transition: border 0.3s ease;
+}
+
+.esc-hint {
+  padding: 10px 28px;
+  background-color: #FF4B00;
+  border: none;
+  color: white;
+  border-radius: 8px;
+  font-size: 18px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+/* Recent Section */
+.recent-section h4 {
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+  color: black;
+}
+
+.recent-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.recent-list li {
+  padding: 10px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.2s;
+  color: black;
+}
