--- a/codeatlas-frontend/src/assets/styles/projects.css
+++ b/codeatlas-frontend/src/assets/styles/projects.css
@@ -38,11 +38,11 @@
   cursor: pointer;
 }
 
-.project-button:hover {
+/* .project-button:hover {
   background-color: white;
   border: 2px solid #FF4B00;
   color: black;
-}
+} */
 
 .delete-button {
   padding: 9px 28px;
@@ -72,14 +72,20 @@
   background: white;
   padding: 20px 50px;
   border-radius: 10px;
-  width: 300px;
+  width: 500px;
   text-align: center;
+}
+
+.modal p {
+  font-size: 18px;
 }
 
 .modal-actions {
   display: flex;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: center;
   margin-top: 20px;
+  gap: 10px;
 }
 
 .yes-button {
