--- a/codeatlas-frontend/src/assets/styles/analyzedProjects.css
+++ b/codeatlas-frontend/src/assets/styles/analyzedProjects.css
@@ -1,3 +1,15 @@
+.analyzed-project-card {
+  height: 100vh;
+  overflow-y: auto;
+  scrollbar-width: none;   
+  -ms-overflow-style: none; 
+}
+
+.analyzed-project-card::-webkit-scrollbar {
+  display: none; 
+}
+
+
 /* Card Title */
 .back-button {
   display: inline-flex;
@@ -69,10 +81,6 @@
   font-size: 18px;
   margin-left: 20px;
 }
-
-/* .view-button:hover {
-  background-color: #FF4B00;
-} */
 
 /* Repo Stats */
 .repo-stats {
@@ -370,4 +378,29 @@
   height: 5px;
   border-radius: 5px;
   margin-top: 2px;
+}
+
+/* Scroll To Top Page */
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;          
+  height: 50px;         
+  background-color: #FF4B00;
+  color: white;
+  border: none;
+  border-radius: 50%;   
+  font-size: 22px;
+  cursor: pointer;
+  display: flex;        
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  transition: background-color 0.3s;
+  z-index: 1000;
+}
+
+.scroll-to-top:hover {
+  background-color: #e04300;
 }
