--- a/codeatlas-frontend/src/assets/styles/analyzedProjects.css
+++ b/codeatlas-frontend/src/assets/styles/analyzedProjects.css
@@ -312,7 +312,7 @@
   flex-direction: column;
   gap: 10px;
   max-height: 400px;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   padding-right: 5px;
 }
 
