--- a/codeatlas-frontend/src/assets/styles/analyzedProjects.css
+++ b/codeatlas-frontend/src/assets/styles/analyzedProjects.css
@@ -443,6 +443,112 @@
   border: 1px solid #ccc;
 }
 
+/* PR Review */
+.no-pr {
+  color: #777;
+  font-size: 16px;
+}
+
+.pr-list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.pr-card {
+   background-color: #f9f9f9;
+  border-left: 4px solid #ff6600;
+  padding: 10px 15px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
+}
+
+.pr-card:hover {
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+}
+
+.pr-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.pr-title {
+  font-size: 18px;
+  color: #FF4B00;
+  text-decoration: none;
+}
+
+.pr-title:hover {
+  text-decoration: underline;
+}
+
+.pr-status {
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.pr-status.open { background: #28a745; }
+.pr-status.closed { background: #dc3545; }
+.pr-status.merged { background: #6c757d; }
+
+.pr-author, .pr-merged {
+  font-size: 14px;
+  color: black;
+  margin-bottom: 4px;
+}
+
+.pr-reviews summary {
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 8px;
+}
+
+.review-card {
+  border-left: 4px solid #007bff;
+  padding: 8px 12px;
+  margin: 6px 0;
+  background: #f9f9f9;
+  border-radius: 4px;
+}
+
+.review-body {
+  margin-top: 4px;
+  color: #333;
+}
+
+.review-date {
+  font-size: 12px;
+  color: #777;
+}
+
+/*  */
+
+.pr-draft {
+  color: #ff9800;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.pr-labels, .pr-assignees, .pr-comments, .pr-size, .pr-milestone, .pr-merged-by {
+  font-size: 13px;
+  color: #333;
+  margin-bottom: 4px;
+}
+
+.pr-labels span, .pr-assignees span {
+  background-color: #eee;
+  border-radius: 4px;
+  padding: 2px 6px;
+  margin-right: 4px;
+  font-size: 12px;
+}
+
+
 /* Scroll To Top Page */
 .scroll-to-top {
   position: fixed;
