--- a/codeatlas-frontend/src/assets/styles/projects.css
+++ b/codeatlas-frontend/src/assets/styles/projects.css
@@ -1,3 +1,25 @@
+.not-logged-in {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  text-align: center;
+}
+
+.login-image {
+  width: 200px;
+  height: auto;
+  margin-bottom: 20px;
+  opacity: 0.9;
+}
+
+.login-message {
+  font-size: 30px;
+  color: black;
+  font-weight: 500;
+}
+
 .projects-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
