organized the files, added custom toast and added dropdown for phone number country code

--- a/codeatlas-frontend/src/assets/styles/login.css
+++ b/codeatlas-frontend/src/assets/styles/login.css
@@ -4,10 +4,15 @@
   background-color: #f9fafb; 
 }
 
-.app-header h1 {
-  color: black;
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 5px;
   padding: 12px;
-  font-size: 24px;
+}
+
+.logo h1 {
+  color: black;
 }
 
 .login-screen {
